about and discord

--- a/index.html
+++ b/index.html
@@ -23,9 +23,35 @@
                 <button>Start now</button>
             </div>
             <figure>
-                <img src="./HTML Practise Assets/laptop.png" alt="">
+                <img src="./HTML Practise Assets/laptop.png" alt="Home page image">
             </figure>
         </header>
     </section>
+    <main>
+        <section id="about">
+            <h2>About</h2>
+            <div>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia, exercitationem.</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum non maxime fugit nostrum?</p>
+                <figure>
+                    <img src="./HTML Practise Assets/about.jpg" alt="">
+                </figure>
+            </div>
+        </section>
+        <section id="discord">
+            <h2>Discord</h2>
+            <figure>
+                <img src="./HTML Practise Assets/discord.png" alt="">
+            </figure>
+            <div>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et natus architecto distinctio?</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et natus architecto distinctio?</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et natus architecto distinctio?</p>
+            </div>
+        </section>
+        <section id="contact">
+            
+        </section>
+    </main>
 </body>
 </html>
