contact html done

--- a/index.html
+++ b/index.html
@@ -50,7 +50,16 @@
             </div>
         </section>
         <section id="contact">
-            
+            <h2>Contact</h2>
+            <form>
+                <label>Email</label>
+                <input type="email" placeholder="vinny@example.com" required>
+                <div>
+                    <label>Message</label>
+                    <textarea type="email" placeholder="message" required></textarea> 
+                </div>
+                <button>Submit</button>
+            </form>
         </section>
     </main>
 </body>
