finished html part

--- a/index.html
+++ b/index.html
@@ -62,5 +62,14 @@
             </form>
         </section>
     </main>
+    <footer>
+        <img src="./HTML Practise Assets/FES.svg" alt="">
+        <div>
+            <a href="#about">About</a>
+            <a href="#discord">Discord</a>
+            <a href="#contact">Contact</a>
+        </div>
+        <p>Copyright Frontend Simplified</p>
+    </footer>
 </body>
 </html>
