--- a/index.html
+++ b/index.html
@@ -1,76 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>First Website</title>
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
     <section>
-        <nav>
-            <img src="./HTML Practise Assets/FES.svg" class="logo" alt="">
-            <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#discord">Discord</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-        <header>
-            <div>
-                <h1>Best place to learn Frontend</h1>
-                <p>Go from absolute beginner to pro with a simplified process</p>
-                <button>Start now</button>
-            </div>
-            <figure>
-                <img src="./HTML Practise Assets/laptop.png" alt="Home page image">
-            </figure>
-        </header>
+      <nav>
+        <img src="./HTML Practise Assets/FES.svg" class="logo" alt="" />
+        <ul>
+          <li><a href="#about">About</a></li>
+          <li><a href="#discord">Discord</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+      <header>
+        <div class="row">
+          <div>
+            <h1>Best place to learn Frontend</h1>
+            <p class="subheader">
+              Go from absolute beginner to pro with a simplified process
+            </p>
+            <button>Start now</button>
+          </div>
+          <figure>
+            <img
+              src="./HTML Practise Assets/laptop.png"
+              alt="Home page image"
+            />
+          </figure>
+        </div>
+      </header>
     </section>
     <main>
-        <section id="about">
-            <h2>About</h2>
-            <div>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia, exercitationem.</p>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum non maxime fugit nostrum?</p>
-                <figure>
-                    <img src="./HTML Practise Assets/about.jpg" alt="">
-                </figure>
-            </div>
-        </section>
-        <section id="discord">
-            <h2>Discord</h2>
-            <figure>
-                <img src="./HTML Practise Assets/discord.png" alt="">
-            </figure>
-            <div>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et natus architecto distinctio?</p>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et natus architecto distinctio?</p>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et natus architecto distinctio?</p>
-            </div>
-        </section>
-        <section id="contact">
-            <h2>Contact</h2>
-            <form>
-                <label>Email</label>
-                <input type="email" placeholder="vinny@example.com" required>
-                <div>
-                    <label>Message</label>
-                    <textarea type="email" placeholder="message" required></textarea> 
-                </div>
-                <button>Submit</button>
-            </form>
-        </section>
+      <section id="about">
+        <h2>About</h2>
+        <div>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia,
+            exercitationem.
+          </p>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum non
+            maxime fugit nostrum?
+          </p>
+          <figure>
+            <img src="./HTML Practise Assets/about.jpg" alt="" />
+          </figure>
+        </div>
+      </section>
+      <section id="discord">
+        <h2>Discord</h2>
+        <figure>
+          <img src="./HTML Practise Assets/discord.png" alt="" />
+        </figure>
+        <div>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et natus
+            architecto distinctio?
+          </p>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et natus
+            architecto distinctio?
+          </p>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et natus
+            architecto distinctio?
+          </p>
+        </div>
+      </section>
+      <section id="contact">
+        <h2>Contact</h2>
+        <form>
+          <label>Email</label>
+          <input type="email" placeholder="vinny@example.com" required />
+          <div>
+            <label>Message</label>
+            <textarea type="email" placeholder="message" required></textarea>
+          </div>
+          <button>Submit</button>
+        </form>
+      </section>
     </main>
     <footer>
-        <img src="./HTML Practise Assets/FES.svg" alt="">
-        <div>
-            <a href="#about">About</a>
-            <a href="#discord">Discord</a>
-            <a href="#contact">Contact</a>
-        </div>
-        <p>Copyright Frontend Simplified</p>
+      <img src="./HTML Practise Assets/FES.svg" alt="" />
+      <div>
+        <a href="#about">About</a>
+        <a href="#discord">Discord</a>
+        <a href="#contact">Contact</a>
+      </div>
+      <p>Copyright Frontend Simplified</p>
     </footer>
-</body>
+  </body>
 </html>
