about section css done

--- a/index.html
+++ b/index.html
@@ -38,20 +38,27 @@
     <main>
       <section id="about">
         <h2>About</h2>
-        <div>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia,
-            exercitationem.
-          </p>
-          <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum non
-            maxime fugit nostrum?
-          </p>
-          <figure>
+        <div class="section__description">
+          <div class="section__description--wrapper">
+            <p class="section__description--para">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora,
+              exercitationem non. Rem, voluptate dolorem. Sint aliquid neque
+              ullam fugiat veritatis in perspiciatis nulla, error dolore soluta
+              nisi repudiandae quod odio.
+            </p>
+            <p class="section__description--para">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Perferendis eveniet et beatae nesciunt, quam repellendus earum
+              porro velit, dignissimos inventore itaque incidunt explicabo harum
+              nemo laborum illo officiis magni possimus!
+            </p>
+          </div>
+          <figure class="about__img--wrapper">
             <img src="./HTML Practise Assets/about.jpg" alt="" />
           </figure>
         </div>
       </section>
+
       <section id="discord">
         <h2>Discord</h2>
         <figure>
@@ -72,6 +79,7 @@
           </p>
         </div>
       </section>
+
       <section id="contact">
         <h2>Contact</h2>
         <form>
@@ -85,6 +93,7 @@
         </form>
       </section>
     </main>
+
     <footer>
       <img src="./HTML Practise Assets/FES.svg" alt="" />
       <div>
