Discord section css done

--- a/index.html
+++ b/index.html
@@ -61,22 +61,24 @@
 
       <section id="discord">
         <h2>Discord</h2>
-        <figure>
-          <img src="./HTML Practise Assets/discord.png" alt="" />
-        </figure>
-        <div>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et natus
-            architecto distinctio?
-          </p>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et natus
-            architecto distinctio?
-          </p>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et natus
-            architecto distinctio?
-          </p>
+        <div class="section__description">
+          <figure class="about__img--wrapper">
+            <img src="./HTML Practise Assets/discord.png" alt="" />
+          </figure>
+          <div class="section__description--wrapper">
+            <p class="section__description--para">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas ex,
+              eaque accusamus molestiae aliquam odit quo possimus. Placeat quo
+              repudiandae iure commodi, voluptatum facilis cumque praesentium ut
+              ab exercitationem aliquam?
+            </p>
+            <p class="section__description--para">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi
+              fugit rerum quidem maxime voluptatem temporibus illum cupiditate
+              nobis aspernatur iure atque, voluptates tempora maiores
+              laudantium, nulla porro sit, libero dolorum?
+            </p>
+          </div>
         </div>
       </section>
 
