Contact section css done

--- a/index.html
+++ b/index.html
@@ -86,12 +86,10 @@
         <h2>Contact</h2>
         <form>
           <label>Email</label>
-          <input type="email" placeholder="vinny@example.com" required />
-          <div>
+          <input type="email" placeholder="Vinny@example.com" required />
             <label>Message</label>
-            <textarea type="email" placeholder="message" required></textarea>
-          </div>
-          <button>Submit</button>
+            <textarea type="text" placeholder="Lets get connected!"></textarea>
+            <button>Submit</button>
         </form>
       </section>
     </main>
