--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
         </div>
       </header>
     </section>
+
     <main>
       <section id="about">
         <h2>About</h2>
+        <div class="row">
         <div class="section__description">
           <div class="section__description--wrapper">
             <p class="section__description--para">
@@ -57,10 +59,12 @@
             <img src="./HTML Practise Assets/about.jpg" alt="" />
           </figure>
         </div>
+        </div>
       </section>
 
       <section id="discord">
         <h2>Discord</h2>
+        <div class="row">
         <div class="section__description">
           <figure class="about__img--wrapper">
             <img src="./HTML Practise Assets/discord.png" alt="" />
@@ -80,6 +84,7 @@
             </p>
           </div>
         </div>
+        </div>
       </section>
 
       <section id="contact">
@@ -87,19 +92,20 @@
         <form>
           <label>Email</label>
           <input type="email" placeholder="Vinny@example.com" required />
-            <label>Message</label>
-            <textarea type="text" placeholder="Lets get connected!"></textarea>
-            <button>Submit</button>
+          <label>Message</label>
+          <textarea type="text" placeholder="Lets get connected!"></textarea>
+          <button>Submit</button>
         </form>
       </section>
     </main>
 
     <footer>
-      <img src="./HTML Practise Assets/FES.svg" alt="" />
-      <div>
-        <a href="#about">About</a>
-        <a href="#discord">Discord</a>
-        <a href="#contact">Contact</a>
+      <img class="footer__logo" src="./HTML Practise Assets/FES.svg" alt="" />
+      <div class="footer__links">
+        <a class="footer__link" href="#about">About</a>
+        <a class="footer__link" href="#discord">Discord</a>
+        <a class="footer__link" href="#contact">Contact</a>
+        <a class="footer__link" href="#courses">Courses</a>
       </div>
       <p>Copyright Frontend Simplified</p>
     </footer>
