--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <input type="email" placeholder="Vinny@example.com" required />
           <label>Message</label>
           <textarea type="text" placeholder="Lets get connected!"></textarea>
-          <button>Contact!</button>
+          <button>Submit</button>
         </form>
       </section>
     </main>
